messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment
  labels:
    app: messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-app-container
          image: royalboe/messaging-app:v3-sqlite
          ports:
            - containerPort: 8000
          envFrom:   # ✅ moved inside container spec
            - configMapRef:
                name: messaging-app-config
            - secretRef:
                name: messaging-app-secret
