messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "messaging-app.example.com"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: messaging-app
            port:
              number: 80
